Resize tooltip to prevent overflow

--- a/css/record.css
+++ b/css/record.css
@@ -7,7 +7,7 @@
 .tooltip {
     visibility: hidden;
     position: absolute; bottom: 0; left: 0; right: 0;
-    color: #555; font-family: sans-serif; font-size: 1.5em;
+    color: #555; font-family: sans-serif; font-size: 1em;
     text-align: center;
     line-height: 1em;
 }
